# DDAD

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.70a10cb  CMakeLists.txt.user.f3f01f9  DDAD.sublime-project  DDAD.sublime-workspace  README.md  compiling
archive/: CMakeLists.txt
archive/algos/: CMakeLists.txt  Convex_hull.cpp  Convex_hull.h  Discrete_upper_envelope.cpp  Discrete_upper_envelope.h  NN_transform.cpp  NN_transform.h  Voronoi_poly_set.cpp  Voronoi_poly_set.h
archive/apps_graphical/: CMakeLists.txt  nn_transform.cpp
archive/base/: Algebraic_predicates.h  CMakeLists.txt  Constructions_2.cpp  Constructions_2.h  DDAD_base.cpp  DDAD_base.h  DDAD_rlog.h  Line_2.cpp  Line_2.h  Point_2.cpp  Point_2.h  Poly_chain_2.cpp  Poly_chain_2.h  Predicates_2.cpp  Predicates_2.h  Radix_sort.h  Segment_2.cpp  Segment_2.h  Shuffle.h  Timer.h
archive/bool_op/RedBlue/src/: Bundle.cpp  Bundle.h  BundleList.cpp  BundleList.h  BundleTree.cpp  BundleTree.h  PointQueue.h  PolygonVertex.h  QueryPoint.cpp  QueryPoint.h  RedBlueIntersection.cpp  StandardSegment.cpp  StandardSegment.h  TheMain.cpp  doubly_linked_list.h  redblueintersection.h  splaytree.h
archive/bool_op/SplayTree/src/: SplayTree.cpp
archive/data/jacksInput/: input01.pts
archive/data/mpeg7/fish/: fish-1.gif.bdd.pts  fish-10.gif.bdd.pts  fish-11.gif.bdd.pts  fish-12.gif.bdd.pts  fish-13.gif.bdd.pts  fish-14.gif.bdd.pts  fish-15.gif.bdd.pts  fish-16.gif.bdd.pts  fish-17.gif.bdd.pts  fish-18.gif.bdd.pts  fish-19.gif.bdd.pts  fish-2.gif.bdd.pts  fish-20.gif.bdd.pts  fish-3.gif.bdd.pts  fish-4.gif.bdd.pts  fish-5.gif.bdd.pts  fish-6.gif.bdd.pts  fish-7.gif.bdd.pts  fish-8.gif.bdd.pts  fish-9.gif.bdd.pts
archive/data/mpeg7/frog/: frog-1.gif.bdd.pts  frog-10.gif.bdd.pts  frog-11.gif.bdd.pts  frog-12.gif.bdd.pts  frog-13.gif.bdd.pts  frog-14.gif.bdd.pts  frog-15.gif.bdd.pts  frog-16.gif.bdd.pts  frog-17.gif.bdd.pts  frog-18.gif.bdd.pts  frog-19.gif.bdd.pts  frog-2.gif.bdd.pts  frog-20.gif.bdd.pts  frog-3.gif.bdd.pts  frog-4.gif.bdd.pts  frog-5.gif.bdd.pts  frog-6.gif.bdd.pts  frog-7.gif.bdd.pts  frog-8.gif.bdd.pts  frog-9.gif.bdd.pts
archive/data/mpeg7/lizzard/: lizzard-1.gif.bdd.pts  lizzard-10.gif.bdd.pts  lizzard-11.gif.bdd.pts  lizzard-12.gif.bdd.pts  lizzard-13.gif.bdd.pts  lizzard-14.gif.bdd.pts  lizzard-15.gif.bdd.pts  lizzard-16.gif.bdd.pts  lizzard-17.gif.bdd.pts  lizzard-18.gif.bdd.pts  lizzard-19.gif.bdd.pts  lizzard-2.gif.bdd.pts  lizzard-20.gif.bdd.pts  lizzard-3.gif.bdd.pts  lizzard-4.gif.bdd.pts  lizzard-5.gif.bdd.pts  lizzard-6.gif.bdd.pts  lizzard-7.gif.bdd.pts  lizzard-8.gif.bdd.pts  lizzard-9.gif.bdd.pts
archive/data/mpeg7/lmfish/: lmfish-1.gif.bdd.pts  lmfish-10.gif.bdd.pts  lmfish-11.gif.bdd.pts  lmfish-12.gif.bdd.pts  lmfish-13.gif.bdd.pts  lmfish-14.gif.bdd.pts  lmfish-15.gif.bdd.pts  lmfish-16.gif.bdd.pts  lmfish-17.gif.bdd.pts  lmfish-18.gif.bdd.pts  lmfish-19.gif.bdd.pts  lmfish-2.gif.bdd.pts  lmfish-20.gif.bdd.pts  lmfish-3.gif.bdd.pts  lmfish-4.gif.bdd.pts  lmfish-5.gif.bdd.pts  lmfish-6.gif.bdd.pts  lmfish-7.gif.bdd.pts  lmfish-8.gif.bdd.pts  lmfish-9.gif.bdd.pts
archive/data/mpeg7/octopus/: octopus-1.gif.bdd.pts  octopus-10.gif.bdd.pts  (+18 more)
archive/demo/: CMakeLists.txt  demo_Convex_hull.cpp  demo_Discrete_upper_envelope.cpp  demo_NN_transform.cpp
archive/docs/: DDAD_doc_config
archive/experiment/: CMakeLists.txt  nnt_mpeg7.cpp  nnt_vary_u_and_delta.cpp  time_convex_hull.cpp  time_nn_transform.cpp
archive/notes/: profiling_w_valgrind  setting_up_ddad
archive/test/: CMakeLists.txt  run_tests.cpp  test_Constructions_2.cc  test_Convex_hull.cc  test_DDAD_base.cc  test_Discrete_upper_envelope.cc  test_Line_2.cc  test_NN_transform.cc  test_Point_2.cc  test_Predicates_2.cc  test_Radix_sort.cc  test_Segment_2.cc  test_Shuffle.cc  test_Voronoi_poly_set.cc
archive/viz/: CMakeLists.txt  Convex_hull_drawer.cpp  Convex_hull_drawer.h  DDAD_drawer.h  Discrete_upper_envelope_drawer.cpp  Discrete_upper_envelope_drawer.h  NN_transform_drawer.cpp  NN_transform_drawer.h  OGL.h
geometry/: CMakeLists.txt  aabb.cpp  aabb.h  arithmetic.h  arrangement.cpp  arrangement.cpp.autosave  arrangement.h  arrangement2.cpp  common.h  datastructures.cpp  datastructures.h  intersection.cpp  intersection.h  line.cpp  line.h  matrix.cpp  matrix.h  observer.cpp  observer.h  point.cpp  point.h  pointset.cpp  pointset.h  polygon.cpp  polygon.h  polytope.cpp  polytope.h  predicate.cpp  predicate.h  quadedge.cpp  quadedge.h  sphere.cpp  sphere.h  terrain.cpp  terrain.h  triangle.cpp  triangle.h  triangulation.cpp  triangulation.h  vector.h  (+4 more)
logging/: CMakeLists.txt  Error.cpp  Error.h  Lock.h  Mutex.h  RLogChannel.h  RLogNode.h  RLogPublisher.cpp  RLogPublisher.h  RLogTime.cpp  RLogTime.h  StdioNode.cpp  StdioNode.h  common.h  easylogging++.h  rlog.h  rloglocation.cpp  rloglocation.h  testlog.cpp
workbench/: CMakeLists.txt  array.h  common.h  config.cpp  config.h  grid.cpp  grid.h  logger.cpp  logger.h  main.cpp  opengl.cpp  opengl.h  qt_dialog_about.cpp  qt_dialog_about.h  qt_dialog_preferences.cpp  qt_dialog_preferences.h  qt_point_set_algorithms.cpp  qt_point_set_algorithms.h  qt_point_set_creation_method.cpp  qt_point_set_creation_method.h  qt_polyline_algorithms.cpp  qt_polyline_algorithms.h  qt_polyline_creation_method.cpp  qt_polyline_creation_method.h  qt_polytope_algorithms.cpp  qt_polytope_algorithms.h  qt_polytope_creation_method.cpp  qt_polytope_creation_method.h  qt_widget_orthographic.cpp  qt_widget_orthographic.h  qt_widget_perspective.cpp  qt_widget_perspective.h  qt_window_main.cpp  qt_window_main.h  scene.cpp  scene.h
workbench/forms/: dialog_about.ui  dialog_preferences.ui  point_set_algorithms.ui  point_set_creation_method.ui  polyline_algorithms.ui  polyline_creation_method.ui  polytope_algorithms.ui  polytope_creation_method.ui  window_main.ui
workbench/resources/: about.psd  icon.psd  icon.rc  resources.qrc  splash.psd  splash_shadow.psd
workbench/resources/shaders/: mat_flat_opaque.vsh  mat_flat_transparent.fsh  mat_flat_transparent.vsh  mat_unlit_opaque.fsh  mat_unlit_transparent.vsh
(+149 files in other folders)
