#==============================================================================
# @author Clinton Freeman
# @date 2014-03-18
#==============================================================================

add_library(geometry
    arithmetic.cpp
    common.cpp
    intersection.cpp
    line.cpp
    matrix.cpp
    point.cpp
    polygon.cpp
    polytope.cpp
    quadedge.cpp
    triangle.cpp
    triangulation.cpp
    vector.h
    visual.cpp
    wedge.cpp
)
