add_library(geometry
    aabb.cpp
    arithmetic.cpp
    common.cpp
    intersection.cpp
    line.cpp
    matrix.cpp
    point.cpp
    pointset.cpp
    polygon.cpp
    polytope.cpp
    predicate.cpp
    quadedge.cpp
    sphere.cpp
    terrain.cpp
    triangle.cpp
    triangulation.cpp
    vector.h
    visual.cpp
    wedge.cpp
)
