#==============================================================================
# @author Clinton Freeman
# @date 2014-03-18
#==============================================================================

add_library(logging
	Error.cpp
	rlog.cpp
	RLogChannel.cpp
	rloginit.cpp
	rloglocation.cpp
	RLogNode.cpp
	RLogPublisher.cpp
	RLogTime.cpp
	StdioNode.cpp
)